Grace/tests/gibbs/errors/t107.grace
// ERROR = P1002
method a(b)c {}
